[package]
name = "actix-web-module-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.4.0"
bytes = "1.4.0"
chrono = "0.4.28"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
tokio = "1.32.0"
uuid = { version = "1.4.1", features = ["v4"] }
