[package]
name = "actix-web-module-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.32.0"
actix-multipart = "0.6.1"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "chrono"] }
actix-web = { version = "4.4.0" }
anyhow = "1.0.75"
bytes = "1.4.0"
chrono = "0.4.28"
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
tokio-util = "0.7.8"
uuid = { version = "1.4.1", features = ["v4"] }
dotenv = "0.15.0"
mime_guess = "2.0.4"
env_logger = "0.10.0"
